Parser/test_cases/good/dispatchimpliednoargs.cl
class Test {
  foo:Test;
  bar():Object{bar()};
};
