Parser/test_cases/bad/dispatchnocommas.cl
class Hello {

   foo:Int <- 89;
   bar:Int;
   
   foo(a:Int, b:Int, c:String): Int  {
      goober(a b c)
   };
   
   bar() :Int {
      6
   };
   
   
};
